[gd_scene load_steps=3 format=3 uid="uid://dg85a7eujpo6p"]

[ext_resource type="Script" uid="uid://bunealm3ly3bs" path="res://ui/OptionesMenu.gd" id="1_q2aw3"]
[ext_resource type="Texture2D" uid="uid://tpl4kgy6hf4f" path="res://art/png/GameOver.png" id="2_panel4"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2aw3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_panel4")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "OPCIONES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "MUSIC PLAYER"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="SfxLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "AUDIO STREAM"
horizontal_alignment = 1

[node name="SfxSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="MenuLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 28
text = "MUSIC INICIO"
horizontal_alignment = 1

[node name="MenuSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
value = 80.0

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "VOLVER"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SfxSlider" to="." method="_on_sfx_slider_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MenuSlider" to="." method="_on_menu_slider_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
